--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Landing Page</title>
-      <link rel="stylesheet" href="public/stylesheets/style.css">
+      <link rel="stylesheet" href="/stylesheets/style.css">
     </head>
 <body>
 
