--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                                     <div class="flex items-center">
                                         <div>
                                             <span
-                                                class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-                                                    class="fas fa-fingerprint"></i></span>
+                                                class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blue-600 bg-green-400 mr-3"><i
+                                                    class="fas fa-tag"></i></span>
                                         </div>
                                         <div>
                                             <h4 class="text-gray-600">
@@ -237,8 +237,8 @@
                                     <div class="flex items-center">
                                         <div>
                                             <span
-                                                class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-                                                    class="fab fa-html5"></i></span>
+                                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blue-600 bg-green-400 mr-3"><i
+                                            class="fas fa-tag"></i></span>
                                         </div>
                                         <div>
                                             <h4 class="text-gray-600">Ampliar tus horizontes</h4>
@@ -249,8 +249,8 @@
                                     <div class="flex items-center">
                                         <div>
                                             <span
-                                                class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-                                                    class="far fa-paper-plane"></i></span>
+                                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blue-600 bg-green-400 mr-3"><i
+                                            class="fas fa-tag"></i></span>
                                         </div>
                                         <div>
                                             <h4 class="text-gray-600">Potenciar tu carrera</h4>
@@ -261,8 +261,8 @@
                                     <div class="flex items-center">
                                         <div>
                                             <span
-                                                class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-pink-600 bg-pink-200 mr-3"><i
-                                                    class="far fa-paper-plane"></i></span>
+                                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blue-600 bg-green-400 mr-3"><i
+                                            class="fas fa-tag"></i></span>
                                         </div>
                                         <div>
                                             <h4 class="text-gray-600">Conectar con una comunidad</h4>
@@ -302,16 +302,10 @@
                                         <polygon points="-30,95 583,95 583,65" class="text-pink-600 fill-current">
                                         </polygon>
                                     </svg>
-                                    <h4 class="text-xl font-bold text-white">
+                                    <h4 class="text-xl text-center font-bold text-white">
                                         Nuestra visión
                                     </h4>
-                                    <p class="text-md font-light mt-2 text-white">
-                                        Ser reconocidos como líderes en educación continua, brindando oportunidades de
-                                        aprendizaje
-                                        innovadoras y accesibles que empoderen a nuestros estudiantes y contribuyan al
-                                        desarrollo
-                                        sostenible de la región.
-                                    </p>
+                                    <hr class="my-2 border-y-yellow-300" />
                                 </blockquote>
                             </div>
                         </div>
@@ -329,16 +323,10 @@
                                         <polygon points="-30,95 583,95 583,65" class="text-pink-600 fill-current">
                                         </polygon>
                                     </svg>
-                                    <h4 class="text-xl font-bold text-white">
+                                    <h4 class="text-xl text-center font-bold text-white">
                                         Nuestra visión
                                     </h4>
-                                    <p class="text-md font-light mt-2 text-white">
-                                        Ser reconocidos como líderes en educación continua, brindando oportunidades de
-                                        aprendizaje
-                                        innovadoras y accesibles que empoderen a nuestros estudiantes y contribuyan al
-                                        desarrollo
-                                        sostenible de la región.
-                                    </p>
+                                    <hr class="my-2 border-y-yellow-300" />
                                 </blockquote>
                             </div>
                         </div>
@@ -356,16 +344,10 @@
                                         <polygon points="-30,95 583,95 583,65" class="text-pink-600 fill-current">
                                         </polygon>
                                     </svg>
-                                    <h4 class="text-xl font-bold text-white">
+                                    <h4 class="text-xl text-center font-bold text-white">
                                         Nuestra visión
                                     </h4>
-                                    <p class="text-md font-light mt-2 text-white">
-                                        Ser reconocidos como líderes en educación continua, brindando oportunidades de
-                                        aprendizaje
-                                        innovadoras y accesibles que empoderen a nuestros estudiantes y contribuyan al
-                                        desarrollo
-                                        sostenible de la región.
-                                    </p>
+                                    <hr class="my-2 border-y-yellow-300" />
                                 </blockquote>
                             </div>
                         </div>
@@ -383,21 +365,22 @@
                                         <polygon points="-30,95 583,95 583,65" class="text-pink-600 fill-current">
                                         </polygon>
                                     </svg>
-                                    <h4 class="text-xl font-bold text-white">
+                                    <h4 class="text-xl text-center font-bold text-white">
                                         Nuestra visión
                                     </h4>
-                                    <p class="text-md font-light mt-2 text-white">
-                                        Ser reconocidos como líderes en educación continua, brindando oportunidades de
-                                        aprendizaje
-                                        innovadoras y accesibles que empoderen a nuestros estudiantes y contribuyan al
-                                        desarrollo
-                                        sostenible de la región.
-                                    </p>
+                                    <hr class="my-2 border-y-yellow-300" />
                                 </blockquote>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="flex flex-wrap justify-center text-center mb-24">
+                    <div class="w-full lg:w-6/12 px-4">
+                        <h2 class="text-4xl font-semibold">Nuestros Instructores</h2>
+                    </div>
+                </div>
+
                 <div class="flex flex-wrap">
                     <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4">
                         <div class="px-6">
@@ -511,7 +494,7 @@
                 </svg>
             </div>
             <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
-                <div class="flex flex-wrap text-center justify-center">
+                <!--<div class="flex flex-wrap text-center justify-center">
                     <div class="w-full lg:w-6/12 px-4">
                         <h2 class="text-4xl font-semibold text-white">Build something</h2>
                         <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
@@ -520,7 +503,7 @@
                             Atmospheric Administration, Ted, Scambos.
                         </p>
                     </div>
-                </div>
+                </div>-->
                 <div class="flex flex-wrap mt-12 justify-center">
                     <div class="w-full lg:w-3/12 px-4 text-center">
                         <div
@@ -569,15 +552,15 @@
                         <div
                             class="flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300">
                             <div class="flex-auto p-5 lg:p-10">
-                                <h4 class="text-2xl font-semibold">Want to work with us?</h4>
+                                <h3 class="text-2xl text-center font-semibold">Solicita Información</h4>
                                 <p class="leading-relaxed mt-1 mb-4 text-gray-600">
-                                    Complete this form and we will get back to you in 24 hours.
+                                    Complete este formulario y nos comunicaremos con usted en 24 horas.
                                 </p>
                                 <div class="relative w-full mb-3 mt-8">
                                     <label class="block uppercase text-gray-700 text-xs font-bold mb-2"
-                                        for="full-name">Full Name</label><input type="text"
+                                        for="full-name">Nombres</label><input type="text"
                                         class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
-                                        placeholder="Full Name" style="transition: all 0.15s ease 0s;" />
+                                        placeholder="Nombres y apellidos completos" style="transition: all 0.15s ease 0s;" />
                                 </div>
                                 <div class="relative w-full mb-3">
                                     <label class="block uppercase text-gray-700 text-xs font-bold mb-2"
@@ -587,15 +570,15 @@
                                 </div>
                                 <div class="relative w-full mb-3">
                                     <label class="block uppercase text-gray-700 text-xs font-bold mb-2"
-                                        for="message">Message</label><textarea rows="4" cols="80"
+                                        for="message">Mensaje</label><textarea rows="4" cols="80"
                                         class="border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full"
-                                        placeholder="Type a message..."></textarea>
+                                        placeholder="Escribe lo que te gustaría conocer"></textarea>
                                 </div>
                                 <div class="text-center mt-6">
                                     <button
-                                        class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1"
+                                        class="bg-green-400 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1"
                                         type="button" style="transition: all 0.15s ease 0s;">
-                                        Send Message
+                                        Enviar
                                     </button>
                                 </div>
                             </div>
@@ -615,11 +598,9 @@
         </div>
         <div class="container mx-auto px-4">
             <div class="flex flex-wrap">
-                <div class="w-full lg:w-6/12 px-4">
-                    <h4 class="text-3xl font-semibold">Let's keep in touch!</h4>
-                    <h5 class="text-lg mt-0 mb-2 text-gray-700">
-                        Find us on any of these platforms, we respond 1-2 business days.
-                    </h5>
+                <div class="w-full lg:w-6/12 px-4 text-center">
+                    <h5 class="text-2xl font-semibold">Síguenos en nuestras redes sociales</h4>
+                        <hr class="my-6 border-gray-400" />
                     <div class="mt-6">
                         <button
                             class="bg-white text-blue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
@@ -640,46 +621,27 @@
                 <div class="w-full lg:w-6/12 px-4">
                     <div class="flex flex-wrap items-top mb-6">
                         <div class="w-full lg:w-4/12 px-4 ml-auto">
-                            <span class="block uppercase text-gray-600 text-sm font-semibold mb-2">Useful Links</span>
+                            <span class="block uppercase text-gray-600 text-sm font-semibold mb-2">Enlaces de interés</span>
                             <ul class="list-unstyled">
                                 <li>
                                     <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://www.creative-tim.com/presentation">About Us</a>
+                                        href="https://www.creative-tim.com/presentation">Acerca de Nosotros</a>
                                 </li>
                                 <li>
                                     <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://blog.creative-tim.com">Blog</a>
+                                        href="https://www.uteq.edu.ec/es">UTEQ</a>
                                 </li>
                                 <li>
                                     <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://www.github.com/creativetimofficial">Github</a>
+                                        href="https://biblioteca.uteq.edu.ec/">Biblioteca</a>
                                 </li>
                                 <li>
                                     <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://www.creative-tim.com/bootstrap-themes/free">Free Products</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="w-full lg:w-4/12 px-4">
-                            <span class="block uppercase text-gray-600 text-sm font-semibold mb-2">Other
-                                Resources</span>
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://github.com/creativetimofficial/argon-design-system/blob/master/LICENSE.md">MIT
-                                        License</a>
+                                        href="https://sga.uteq.edu.ec/">SGA</a>
                                 </li>
                                 <li>
                                     <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://creative-tim.com/terms">Terms &amp; Conditions</a>
-                                </li>
-                                <li>
-                                    <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://creative-tim.com/privacy">Privacy Policy</a>
-                                </li>
-                                <li>
-                                    <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                                        href="https://creative-tim.com/contact-us">Contact Us</a>
+                                        href="https://sagest.uteq.edu.ec/loginsagest">SAGEST</a>
                                 </li>
                             </ul>
                         </div>
@@ -690,7 +652,7 @@
             <div class="flex flex-wrap items-center md:justify-between justify-center">
                 <div class="w-full md:w-4/12 px-4 mx-auto text-center">
                     <div class="text-sm text-gray-600 font-semibold py-1">
-                        Copyright © 2019 Tailwind Starter Kit by
+                        Copyright © 2019 Todos los derechos reservados UTEQ
                         <a href="https://www.creative-tim.com" class="text-gray-600 hover:text-gray-900">Creative
                             Tim</a>.
                     </div>
