--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
     </nav>
     <main>
-        <div class="pt-16 pb-32 flex content-center items-center justify-center" style="min-height: 75vh;">
-            <div class="absolute top-0 w-full h-full bg-center bg-cover"
+        <div class="relative pt-16 pb-32 flex content-center items-center justify-center" style="min-height: 75vh;">
+            <div class="absolute w-full h-full bg-center bg-cover"
                 style='background-image: url("/pp_educacioncontinua/img/banne_1.jpg");'>
                 <span id="blackOverlay" class="w-full h-full absolute opacity-75 bg-black"></span>
             </div>
@@ -179,7 +179,7 @@
                     <polygon class="text-white fill-current" points="2560 0 2560 100 0 100"></polygon>
                 </svg>
             </div>
-            <div class="container mx-auto px-4">
+            <div class="relative container mx-auto px-4">
                 <div class="items-center flex flex-wrap">
                     <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
                         <img alt="..." class="max-w-full rounded-lg shadow-lg" src="./img/educacion.jpg" />
